Small Optimizations(Changes List Types, Remove Redundant Checks/Move Checks to Earlier points in algorithm)